2006-06-30  Alexander V. Lukyanov <lav@yars.free.net>

	* ResMgr.cc, ResMgr.h, resource.cc, Cache.h: rename ResDecl to ResType;
	  make ResDecl a derived from ResType; make resources a static array
	  of structures (to save on constructors); make ResDecls class to
	  register bulk of ResType's.
	* GetJob.cc, GetJob.h: add truncate_target_first flag (for pget).
	* pgetJob.cc, pgetJob.h, MirrorJob.cc, commands.cc: support pget -c.

2006-06-28  Alexander V. Lukyanov <lav@yars.free.net>

	* GetJob.cc, GetJob.h, pgetJob.cc, pgetJob.h: simplify copy peer
	  creation; pass url from pget to CreateCopyPeer (this fixes
	  pget http://...?args).
	* resource.cc, ftpclass.cc: add use-allo setting.

2006-06-26  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, FileCopy.cc, FileCopy.h: support for ALLO command; get file size
	  for local sources in any case.
	* Fish.cc: use GNU head if available for upload; use a larger bs for dd in upload
	  and count characters with wc -c (a great speed up for both cases). A fixed
	  version of script by Dmitry Butskoj <buc@odusz.so-cdu.ru> was used (from mc).

2006-06-19  Alexander V. Lukyanov <lav@yars.free.net>

	* StatusLine.cc: handle prev_line==0 case (fixes coredump).

2006-06-16  Alexander V. Lukyanov <lav@yars.free.net>

	* SleepJob.cc, SleepJob.h: new options for repeat (--while-ok, --until-ok).

2006-06-15  Alexander V. Lukyanov <lav@yars.free.net>

	* SleepJob.cc, SleepJob.h, commands.cc: new options for repeat (--count, --delay).
	* NetAccess.cc, NetAccess.h, Http.cc: drop two arg SetSocketBuffer and
	  SetSocketMaxseg methods.
	* ftpclass.cc, ftpclass.h, resource.cc: move abor_close_timer to Ftp::Connection;
	  init it from resource ftp:abor-max-wait; read and discard data from aborted
	  data connection.

2006-06-14  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.cc: use TimeInterval two arg ctor.
	* ftpclass.cc, ftpclass.h: use abor_close_timer instead of abor_time;
	  use Time::Passed and TimeDiff vs int cmp.