@@ -72,6 +72,7 @@ public:
    long GetETA(off_t rem) { return c->GetETA(rem); }
    const char *GetETAStrSFromTime(time_t t) { return c->GetETAStrSFromTime(t); }
    void SetRange(off_t s,off_t lim) { c->SetRange(s,lim); }
+   void SetRangeLimit(off_t lim) { return c->SetRangeLimit(lim); }
    void SetDate(time_t d) { c->SetDate(d); }
    void SetSize(off_t s)   { c->SetSize(s); }
    FileCopy *GetCopy() { return c; }
